--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@
         <button class="num" data-num="0">0</button>
         <button class="num" data-num=".">.</button>
         <button id="equals" class="equals" data-result="">=</button>
-        <button data-ops="divided by" class="ops">/</button>
+        <button data-ops="divided" class="ops">/</button>
       </div>
 
       <button id="reset" class="reset">Reset Universe?</button>
